<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="Enter in value"
            android:autofillHints="false"
            android:textSize="36sp"
            android:textAlignment="textEnd"


            android:ems="10"
            android:id="@+id/editTextNumber"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:id="@+id/tableLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"


                  android:background="#E4E4E4"
        >

            <Button
                    android:text="@string/btn_Clear"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button2"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"

            />
            <Button
                    android:text="@string/btn_devide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button3"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
            />
            <Button
                    android:text="@string/btn_Multiplie"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button4"

                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
            />

            <ImageButton
                    android:contentDescription="backspace"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/button5"
                    app:srcCompat="@drawable/backspace"
                    app:tint="@color/purple_200"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"

        >
            <Button
                    android:text="@string/btn7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button7"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
            />
            <Button
                    android:text="@string/btn8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button8"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
            />
            <Button
                    android:text="@string/btn9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button9"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
            />

            <RelativeLayout
                    android:text="@string/btn_plus"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:id="@+id/button10"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
                    android:background="#E4E4E4"
            >
                <Button android:layout_width="match_parent" android:layout_height="match_parent"
                        style="@style/Widget.AppCompat.Button.Borderless"
                          android:gravity="center"
                          android:text="-"
                          android:textSize="24sp"
                          android:textColor="@color/purple_200"
                />

            </RelativeLayout>
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <Button
                    android:text="@string/btn4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button11"

                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button12"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button13"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <RelativeLayout
                    android:text="@string/btn_plus"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:id="@+id/button14"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
                    android:background="#E4E4E4"
            >
                <Button android:layout_width="match_parent" android:layout_height="match_parent"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:gravity="center"
                          android:text="+"
                          android:textSize="24sp"
                          android:textColor="@color/purple_200"
                />

            </RelativeLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"

        >
            <Button
                    android:text="@string/btn1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button15"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button16"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button17"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <RelativeLayout android:layout_height="60dp"

                            android:layout_weight="1"
                            android:layout_width="0dp" android:id="@+id/button18"
                            android:textSize="24sp"
                            android:textColor="@color/purple_500"
                            android:background="@color/purple_200"

            >
                <Button android:layout_width="match_parent" android:layout_height="match_parent"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:gravity="center"
                        android:text=""
                        android:textSize="24sp"
                        android:textColor="@color/white"
                />

            </RelativeLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"

        >
            <Button
                    android:text="@string/btn0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button19"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn00"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button20"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <Button
                    android:text="@string/btn_Dot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp" android:id="@+id/button21"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"/>
            <RelativeLayout android:layout_height="60dp"
                            android:layout_weight="1"
                            android:layout_width="0dp" android:id="@+id/button22"
                            android:background="@color/purple_200"
            >
                <Button android:layout_width="match_parent" android:layout_height="match_parent"
                          style="@style/Widget.AppCompat.Button.Borderless"
                          android:gravity="center"
                          android:text="="
                          android:textSize="24sp"
                          android:textColor="@color/white"
                />

            </RelativeLayout>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>